<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.epfl.sweng.groupup.activity.info.UserInformationActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:id="@+id/user_infos"
        android:orientation="horizontal"
        android:layout_margin="@dimen/text_margin">

        <TextView
            android:id="@+id/text_view_display_name_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EventCategories"
            android:gravity="start"
            android:text="@string/text_view_display_name_info"
            android:textAlignment="textStart"/>

        <TextView
            android:id="@+id/text_view_display_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EventFields"
            android:text="@string/text_view_display_name_text"
            android:layout_below="@id/text_view_display_name_info"
            android:layout_marginBottom="@dimen/default_gap"/>

        <TextView
            android:id="@+id/text_view_family_name_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EventCategories"
            android:gravity="start"
            android:text="@string/text_view_family_name_info"
            android:textAlignment="textStart"
            android:layout_below="@id/text_view_display_name_text"/>

        <TextView
            android:id="@+id/text_view_family_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EventFields"
            android:text="@string/text_view_family_name_text"
            android:layout_below="@id/text_view_family_name_info"
            android:layout_marginBottom="@dimen/default_gap"/>

        <TextView
            android:id="@+id/text_view_given_name_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EventCategories"
            android:gravity="start"
            android:text="@string/text_view_given_name_info"
            android:textAlignment="textStart"
            android:layout_below="@id/text_view_family_name_text"/>

        <TextView
            android:id="@+id/text_view_given_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EventFields"
            android:text="@string/text_view_given_name_text"
            android:layout_below="@id/text_view_given_name_info"
            android:layout_marginBottom="@dimen/default_gap"/>

        <TextView
            android:id="@+id/text_view_email_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EventCategories"
            android:gravity="start"
            android:text="@string/text_view_email_info"
            android:textAlignment="textStart"
            android:layout_below="@id/text_view_given_name_text"/>

        <TextView
            android:id="@+id/text_view_email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EventFields"
            android:text="@string/text_view_email_text"
            android:layout_below="@id/text_view_email_info"
            android:layout_marginBottom="@dimen/default_gap"/>

        <!-- Currently ignoring lint issue about overlapping button and textView -->
        <Button
            android:id="@+id/button_sign_out"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/button_sign_out_text"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/user_infos"
        android:layout_alignParentBottom="true">

        <ImageView
            android:contentDescription="@string/QR_code"
            android:id="@+id/qrImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:padding="@dimen/default_gap"
            app:srcCompat="@color/transparent" />

    </RelativeLayout>


</RelativeLayout>
