<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ch.epfl.sweng.groupup.activity.event.description.EventDescriptionActivity"
    tools:showIn="@layout/activity_event_description">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/text_margin">

        <TextView
            android:id="@+id/event_description_tv_start_date"
            style="@style/EventCategories"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_header_size"
            android:text="Start Date:" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EventFields"
            android:layout_marginTop="@dimen/normal_header_size"
            android:text="@string/no_event_start_date"
            android:id="@+id/event_description_start_date"
            android:layout_toRightOf="@id/event_description_tv_start_date"/>

        <TextView
            android:id="@+id/event_description_tv_end_date"
            style="@style/EventCategories"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_description_tv_start_date"
            android:text="End Date:" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EventFields"
            android:id="@+id/event_description_end_date"
            android:text="@string/no_event_end_date"
            android:layout_below="@id/event_description_start_date"
            android:layout_toRightOf="@id/event_description_tv_end_date" />

        <TextView
            android:id="@+id/event_description_tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EventCategories"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/event_description_tv_description"
            android:layout_below="@+id/event_description_tv_end_date"/>

        <EditText
            android:id="@+id/event_description_description"
            style="@style/EventFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_description_tv_description"
            android:background="@android:color/transparent"
            android:cursorVisible="false"
            android:hint="@string/change_the_description_of_the_event"
            android:inputType="textAutoComplete"
            android:text="@string/no_event_description" />


        <TextView
            android:id="@+id/event_description_tv_members"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EventCategories"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/event_description_tv_members"
            android:layout_below="@id/event_description_description"/>


        <ScrollView
            android:layout_width="257dp"
            android:layout_height="275dp"
            android:layout_below="@id/event_description_tv_members"
            android:layout_above="@+id/save_event_modification_button"
            >

            <LinearLayout
                android:id="@+id/event_description_linear_scroll_members"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />


        </ScrollView>

    </RelativeLayout>



</android.support.v4.widget.NestedScrollView>
